BaSP-W04-2022:Fix horizontal scroll and about us section

--- a/Semana-04/css/aside.css
+++ b/Semana-04/css/aside.css
@@ -148,12 +148,4 @@ aside {
     color: white;
     transition: color 0.2s linear 0.1s;
   }
-
-  main,
-  header,
-  footer {
-    position: relative;
-    width: 72%;
-    left: 29%;
-  }
 }
